# repo-scaffold-desktop

./: .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  CLAUDE.md  CODEOWNERS  README.md  RELEASE_CHECKLIST.md  litellm-local.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/: settings.json  skills_version.txt
.claude/agents/: epic-reviewer.md  finalize-reviewer.md  repo-investigator.md
.claude/commands/: close-epic.md  contribute-skill.md  finalize-ticket.md  groom-ticket.md  implement-ticket.md  prioritize.md  start-epic.md  start-ticket.md  update-skills.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  ug_report.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  contribute-skills.yml
app/: cli.py
config/: bench-cliff.toml  bench-cliff2.toml  bench-cliff3.toml  bench-vllm-concurrency.toml  bench-vllm-fp8-concurrency.toml  bench-vllm-fp8-highctx.toml  bench-vllm-nvfp4-nothink.toml  bench-vllm-nvfp4.toml  bench-vllm-quality-nothink.toml  bench-vllm-quality.toml  bench-wor221.toml  bench-wor221a2.toml  bench-wor221h.toml  bench-wor221i.toml  bench-wor221j.toml  bench.toml  escalation_policy.toml
docs/: bench.md
schemas/: execution_manifest.json  execution_manifest.schema.json
scripts/: semgrep_run.py
tests/: conftest.py  test_cli.py  test_cli_metrics.py  test_config.py  test_escalation_policy.py  test_generator.py  test_linear_client.py  test_manifest.py  test_metrics.py  test_placeholder.py  test_post_setup.py  test_presets.py  test_user_prefs.py  test_watcher.py  test_watcher_finalize.py  test_watcher_helpers.py  test_watcher_promotion.py  test_watcher_services.py  test_watcher_subprocess.py  test_watcher_types.py  test_watcher_worktrees.py
(+97 files in other folders)
