[project]
name = "repo-scaffold-desktop"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
scaffold = "app.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests"]
skips = []
