[project]
name = "repo-scaffold-desktop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
scaffold = "app.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.deptry]
known_first_party = ["app"]

[tool.deptry.package_module_name_map]
"python-dotenv" = ["dotenv"]

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests"]
skips = []
